# dex

./: .flake8  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  SPEC.md  deploy.sh  dex.hcl  go.mod  go.sum  lint.sh  mcp-tasks.yaml  pyproject.toml  test.sh
.claude/: settings.json
.github/workflows/: release.yml
.runbook/: prompts.yaml  tasks.yaml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md
cmd/dex/: main.go
dex/: __init__.py  __main__.py
dex/adapters/: __init__.py  antigravity.py  base.py  claude_code.py  codex.py  cursor.py  github_copilot.py
dex/cli/: __init__.py  main.py
dex/config/: __init__.py  parser.py  schemas.py
dex/core/: __init__.py  installer.py  lockfile.py  manifest.py  plugin.py  project.py  resolver.py
dex/registry/: __init__.py  azure.py  base.py  cache.py  common.py  factory.py  git.py  https.py  local.py  s3.py
dex/template/: __init__.py  context.py  context_resolver.py  engine.py  filters.py
dex/utils/: __init__.py  filesystem.py  markers.py  platform.py  version.py
docs/: README.md  RESOURCES.md  cli-reference.md  configuration.md  installation.md  oidc-setup.md  plugins.md
infrastructure/: deploy.sh  main.bicep  parameters.json.example  setup-github-oidc.sh  status.sh
internal/adapter/: adapter.go  adapter_test.go  adapter_universal_test.go  claude.go  copilot.go  copilot_test.go  cursor.go  cursor_test.go  plan.go  plan_test.go  universal.go
internal/cli/: info.go  init.go  install.go  list.go  manifest.go  migrate.go  pack.go  publish.go  registry.go  root.go  sync.go  uninstall.go  update.go  update_ignore.go  update_ignore_test.go  version.go
internal/config/: config_test.go  local.go  local_test.go  package.go  parse.go  profile_test.go  project.go
internal/errors/: errors.go  errors_test.go
internal/installer/: executor.go  installer.go  installer_agent_test.go  installer_file_test.go  installer_mcp_test.go  installer_registry_test.go  installer_settings_test.go  installer_sync_test.go  installer_test.go  merger.go  merger_test.go
internal/jsonutil/: jsonutil.go
internal/lockfile/: lockfile.go  lockfile_test.go
internal/manifest/: manifest.go  manifest_test.go
internal/packer/: packer.go  packer_test.go
internal/publisher/: azure.go  https.go  local.go  s3.go  (+3 more)
scripts/: build-all.sh  install.ps1  install.sh
tests/: __init__.py  conftest.py
website/: deploy.sh  docs.html  index.html  robots.txt  sitemap.xml
(+108 files in other folders)
